# discovery-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  local_worker.py  main.py  pyproject.toml  requirements.txt
_agent/: crew_entrypoint.py
_agent/agents/: crew.py  intake_parser.py  proposal_drafter.py  scope_estimator.py  solution_architect.py
_agent/tools/: audio_capture.py  github_uploader.py  markdown_generator.py  output_naming.py  pdf_generator.py  pm_review_generator.py  rag_search.py  transcriber.py
_agent/workflows/: live_mode.md  manual_mode.md  output_generation.md
docs/: clear_hybrid_process_flow.drawio  hybrid_discovery_agent_architecture.drawio  process_logic.md
examples/: atlas_lead_qualification_transcript.txt  fake_transcript_northstar.txt  fake_transcript_verdevida.txt
knowledge/: case_001_clinic_no_show_automation.txt  case_002_b2b_lead_qualification.txt  case_003_inventory_exception_triage.txt
knowledge_base/: case_001_clinic_no_show_automation.txt  case_002_b2b_lead_qualification.txt  case_003_inventory_exception_triage.txt
macos/DiscoveryAgentLauncher/: Package.swift
macos/DiscoveryAgentLauncher/.build/: build.db  plugin-tools.yaml
modes/: live_mode.py  manual_mode.py
n8n/workflows/: discovery_agent_hybrid_workflow.json
scripts/: build_dock_launcher.sh  check_personalization.py  create_dock_launcher.sh  dock_launcher_action.py  run_cloudflare_worker_tunnel.sh  run_local_worker.sh  run_n8n.sh
src/discovery_agent/: crew.py  main.py
src/discovery_agent/config/: agents.yaml  (+1 more)
templates/: client_proposal.html
(+267 files in other folders)
